--- a/training/Linal/training.ipynb
+++ b/training/Linal/training.ipynb
@@ -432,8 +432,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "25c77b9f-3e70-4c58-95be-0e7ec16342b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100000 entries, 0 to 99999\n",
+      "Data columns (total 48 columns):\n",
+      " #   Column                    Non-Null Count   Dtype  \n",
+      "---  ------                    --------------   -----  \n",
+      " 0   survey_code               100000 non-null  int64  \n",
+      " 1   age                       100000 non-null  int64  \n",
+      " 2   gender                    100000 non-null  object \n",
+      " 3   height                    100000 non-null  float64\n",
+      " 4   weight                    100000 non-null  float64\n",
+      " 5   bmi                       100000 non-null  float64\n",
+      " 6   bmi_estimated             100000 non-null  float64\n",
+      " 7   bmi_scaled                100000 non-null  float64\n",
+      " 8   bmi_corrected             100000 non-null  float64\n",
+      " 9   waist_size                100000 non-null  float64\n",
+      " 10  blood_pressure            92331 non-null   float64\n",
+      " 11  heart_rate                85997 non-null   float64\n",
+      " 12  cholesterol               100000 non-null  float64\n",
+      " 13  glucose                   100000 non-null  float64\n",
+      " 14  insulin                   84164 non-null   float64\n",
+      " 15  sleep_hours               100000 non-null  float64\n",
+      " 16  sleep_quality             100000 non-null  object \n",
+      " 17  work_hours                100000 non-null  float64\n",
+      " 18  physical_activity         100000 non-null  float64\n",
+      " 19  daily_steps               91671 non-null   float64\n",
+      " 20  calorie_intake            100000 non-null  float64\n",
+      " 21  sugar_intake              100000 non-null  float64\n",
+      " 22  alcohol_consumption       57613 non-null   object \n",
+      " 23  smoking_level             100000 non-null  object \n",
+      " 24  water_intake              100000 non-null  float64\n",
+      " 25  screen_time               100000 non-null  float64\n",
+      " 26  stress_level              100000 non-null  int64  \n",
+      " 27  mental_health_score       100000 non-null  int64  \n",
+      " 28  mental_health_support     100000 non-null  object \n",
+      " 29  education_level           100000 non-null  object \n",
+      " 30  job_type                  100000 non-null  object \n",
+      " 31  occupation                100000 non-null  object \n",
+      " 32  income                    91530 non-null   float64\n",
+      " 33  diet_type                 100000 non-null  object \n",
+      " 34  exercise_type             75031 non-null   object \n",
+      " 35  device_usage              100000 non-null  object \n",
+      " 36  healthcare_access         100000 non-null  object \n",
+      " 37  insurance                 100000 non-null  object \n",
+      " 38  sunlight_exposure         100000 non-null  object \n",
+      " 39  meals_per_day             100000 non-null  int64  \n",
+      " 40  caffeine_intake           66739 non-null   object \n",
+      " 41  family_history            100000 non-null  object \n",
+      " 42  pet_owner                 100000 non-null  object \n",
+      " 43  electrolyte_level         100000 non-null  int64  \n",
+      " 44  gene_marker_flag          89526 non-null   float64\n",
+      " 45  environmental_risk_score  100000 non-null  float64\n",
+      " 46  daily_supplement_dosage   100000 non-null  float64\n",
+      " 47  target                    100000 non-null  object \n",
+      "dtypes: float64(24), int64(6), object(18)\n",
+      "memory usage: 36.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "cd5097c0-2269-45d2-9021-c7eed6b92ff4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "survey_code                     0\n",
+       "age                             0\n",
+       "gender                          0\n",
+       "height                          0\n",
+       "weight                          0\n",
+       "bmi                             0\n",
+       "bmi_estimated                   0\n",
+       "bmi_scaled                      0\n",
+       "bmi_corrected                   0\n",
+       "waist_size                      0\n",
+       "blood_pressure               7669\n",
+       "heart_rate                  14003\n",
+       "cholesterol                     0\n",
+       "glucose                         0\n",
+       "insulin                     15836\n",
+       "sleep_hours                     0\n",
+       "sleep_quality                   0\n",
+       "work_hours                      0\n",
+       "physical_activity               0\n",
+       "daily_steps                  8329\n",
+       "calorie_intake                  0\n",
+       "sugar_intake                    0\n",
+       "alcohol_consumption         42387\n",
+       "smoking_level                   0\n",
+       "water_intake                    0\n",
+       "screen_time                     0\n",
+       "stress_level                    0\n",
+       "mental_health_score             0\n",
+       "mental_health_support           0\n",
+       "education_level                 0\n",
+       "job_type                        0\n",
+       "occupation                      0\n",
+       "income                       8470\n",
+       "diet_type                       0\n",
+       "exercise_type               24969\n",
+       "device_usage                    0\n",
+       "healthcare_access               0\n",
+       "insurance                       0\n",
+       "sunlight_exposure               0\n",
+       "meals_per_day                   0\n",
+       "caffeine_intake             33261\n",
+       "family_history                  0\n",
+       "pet_owner                       0\n",
+       "electrolyte_level               0\n",
+       "gene_marker_flag            10474\n",
+       "environmental_risk_score        0\n",
+       "daily_supplement_dosage         0\n",
+       "target                          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8e8c80d-1194-4fe8-ab9c-69ce858c376f",
    "metadata": {},
    "outputs": [],
    "source": []
