--- a/training/Linal/training.ipynb
+++ b/training/Linal/training.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 59,
    "id": "153474ec-6a1d-436d-b5cd-e4372f1ea113",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "id": "4bc798ef-fd86-4e5a-8b27-8c4191ddeb9c",
    "metadata": {},
    "outputs": [
@@ -400,7 +401,7 @@
        "[100000 rows x 48 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 61,
    "id": "b9a5b51e-8bbc-4626-a290-08aa7480b139",
    "metadata": {},
    "outputs": [
@@ -422,7 +423,7 @@
        "(100000, 48)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,8 +997,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "bdd4bcb2-54b1-47c3-84c8-70b8e2cde851",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['blood_pressure'] = df['blood_pressure'].fillna(df['blood_pressure'].median())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "c2493ce3-d625-43f7-b0e9-9050c612a001",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['blood_pressure'].isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "b4eb17e0-1c2c-43cd-b8a1-3a18db236e61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_cols = df.select_dtypes(include=[np.number]).columns.tolist()\n",
+    "cat_cols = df.select_dtypes(include=['object','category','bool']).columns.tolist()\n",
+    "datetime_cols = df.select_dtypes(include=['datetime64[ns]']).columns.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "be7892e7-8ca7-455a-ba42-ee85b3783560",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['age', 'height', 'weight', 'bmi', 'waist_size', 'blood_pressure', 'heart_rate', 'cholesterol', 'glucose', 'insulin', 'sleep_hours', 'work_hours', 'physical_activity', 'daily_steps', 'calorie_intake', 'sugar_intake', 'water_intake', 'screen_time', 'stress_level', 'mental_health_score', 'income', 'meals_per_day', 'daily_supplement_dosage']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(num_cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "20fdbadd-74f8-4c5a-a598-8489e52325cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['gender', 'sleep_quality', 'alcohol_consumption', 'smoking_level', 'mental_health_support', 'education_level', 'job_type', 'occupation', 'diet_type', 'exercise_type', 'device_usage', 'healthcare_access', 'insurance', 'sunlight_exposure', 'caffeine_intake', 'family_history', 'pet_owner', 'target']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cat_cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "9ade4ef0-889b-49a7-9fd1-57def47c3c81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(datetime_cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ae6463b-d5e0-40fd-b159-486bb5d2cda2",
    "metadata": {},
    "outputs": [],
    "source": []
