--- a/training/Linal/training.ipynb
+++ b/training/Linal/training.ipynb
@@ -3049,6 +3049,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dbb29acf-4891-410b-a915-57f58c351dd7",
+   "metadata": {},
+   "source": [
+    "# Model Training"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 120,
    "id": "0b7d6cc2-6a22-4b04-ad9a-a1407334e3b9",
